Hideen setting for orgs activated

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     },
     {
       "name": "orgFieldsActivated",
-      "type": "checkbox",
+      "type": "hidden",
       "default": "false"
     }
   ],
