--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,6 @@
   "private": false,
   "singleInstall": true,
   "location": ["ticket_sidebar", "new_ticket_sidebar"],
-  "frameworkVersion": "1.0"
+  "frameworkVersion": "1.0",
+  "version": "1.0"
 }
