--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,24 @@
 {
   "name": "Zendesk User Data",
+
   "author": {
     "name": "Zendesk",
     "email": "support@zendesk.com"
   },
+
+  "defaultLocale": "en",
+  "private": false,
+  "singleInstall": true,
+  "frameworkVersion": "2.0",
+  "version": "2.0.0",
+
+  "location": {
+    "support": {
+      "ticket_sidebar": "assets/iframe.html",
+      "newticket_sidebar": "assets/iframe.html"
+    }
+  },
+
   "parameters": [
     {
       "name": "selectedFields",
@@ -20,14 +35,5 @@
       "type": "hidden",
       "default": "false"
     }
-  ],
-  "defaultLocale": "en",
-  "private": false,
-  "singleInstall": true,
-  "location": [
-    "ticket_sidebar",
-    "new_ticket_sidebar"
-  ],
-  "frameworkVersion": "1.0",
-  "version": "1.1.8"
+  ]
 }
