--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "karma": "karma"
   },
   "devDependencies": {
+    "@zendesk/garden-css-bedrock": "^4.0.0",
+    "@zendesk/garden-css-forms": "^4.0.1",
+    "@zendesk/garden-css-tags": "^2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
