--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@zendesk/garden-css-bedrock": "^4.0.0",
+    "@zendesk/garden-css-buttons": "^4.1.1",
     "@zendesk/garden-css-forms": "^4.0.1",
     "@zendesk/garden-css-tags": "^2",
     "babel-core": "^6.26.0",
