--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:prod": "webpack --env.production -p",
     "lint": "standard"
   },
-  "devDependencies": {
+  "dependencies": {
     "@zendeskgarden/css-bedrock": "^6.0.0",
     "@zendeskgarden/css-buttons": "^5.0.1",
     "@zendeskgarden/css-forms": "^5.0.1",
@@ -28,19 +28,21 @@
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.6.0",
     "html-webpack-plugin": "^2.30.1",
-    "jasmine-core": "^3.1.0",
     "jquery": "^3.3.1",
     "js-yaml": "^3.11.0",
+    "lodash": "^4.17.5",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.11.0"
+  },
+  "devDependencies": {
+    "jasmine-core": "^3.1.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-handlebars-preprocessor": "^0.3.0",
     "karma-jasmine": "^1.1.1",
     "karma-webpack": "^2.0.13",
-    "lodash": "^4.17.5",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "standard": "^11.0.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0"
+    "standard": "^11.0.1"
   }
 }
