--- a/src/manifest.json
+++ b/src/manifest.json
@@ -34,6 +34,11 @@
       "name": "orgFieldsActivated",
       "type": "hidden",
       "default": "false"
+    },
+    {
+      "name": "hideEmptyFields",
+      "type": "hidden",
+      "default": "false"
     }
   ]
 }
