--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "development",
-  "version": "1.0.0",
+  "name": "user_data_app",
+  "version": "2.0.10",
   "description": "",
   "keywords": [],
   "author": "",
