--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - bundle config zdrepo.jfrog.io $ARTIFACTORY_USERNAME:$ARTIFACTORY_API_KEY
 script:
   - npm run lint && npm run build && npm run test
+  - bundle && bundle exec ruby ./validate_strings.rb
 sudo: false
 dist: trusty
 cache:
