Update manifest to use current style

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,8 +14,12 @@
 
   "location": {
     "support": {
-      "ticket_sidebar": "assets/ticket_sidebar.html",
-      "new_ticket_sidebar": "assets/ticket_sidebar.html"
+      "ticket_sidebar": {
+        "url": "assets/ticket_sidebar.html"
+      },
+      "new_ticket_sidebar": {
+        "url": "assets/ticket_sidebar.html"
+      }
     }
   },
 
