--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "lint": "standard"
   },
   "dependencies": {
+    "@zendeskgarden/css-arrows": "^3.1.1",
     "@zendeskgarden/css-bedrock": "^7.0.2",
     "@zendeskgarden/css-buttons": "^6.0.2",
     "@zendeskgarden/css-callouts": "^3.3.2",
     "@zendeskgarden/css-forms": "^6.0.4",
     "@zendeskgarden/css-tags": "^4.0.3",
+    "@zendeskgarden/css-tooltips": "^4.1.14",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.18",
+    "copy-to-clipboard": "^3.1.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
